--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"aws-amplify": "^3.3.14",
 		"formik": "^2.2.6",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"redux": "^4.0.5",
+		"redux-persist": "^6.0.0",
+		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.1",
 		"typescript": "^4.0.3",
 		"web-vitals": "^0.2.4",
@@ -57,6 +62,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/styled-components": "^5.1.7"
 	}
