--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-notifications-component": "^3.0.3",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
@@ -62,6 +63,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-notifications-component": "^2.4.0",
 		"@types/react-redux": "^7.1.16",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/styled-components": "^5.1.7"
