--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"redux-thunk": "^2.3.0",
 		"styled-components": "^5.2.1",
 		"typescript": "^4.0.3",
+		"use-element-dimensions": "^2.1.3",
 		"web-vitals": "^0.2.4",
 		"workbox-background-sync": "^5.1.3",
 		"workbox-broadcast-update": "^5.1.3",
