--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"aws-amplify": "^3.3.14",
+		"body-scroll-lock": "^3.1.5",
 		"formik": "^2.2.6",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
@@ -61,6 +62,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/body-scroll-lock": "^2.6.1",
 		"@types/jest": "^26.0.15",
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.53",
