--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@apollo/client": "^3.3.7",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"aws-amplify": "^3.3.14",
 		"formik": "^2.2.6",
+		"graphql": "^15.5.0",
 		"normalize.css": "^8.0.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
